explore jinja2 template and django apps

--- a/djangotutorial/templates/about.html
+++ b/djangotutorial/templates/about.html
@@ -1,15 +1,5 @@
-{% load static %}
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Django Tutorial</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}" />
-  </head>
-  <body>
-    <h1>Django Tutorials</h1>
+{% extends "layout.html" %}
 
-    <h3>This is About page</h3>
-  </body>
-</html>
+{% block title %}Django Tutorial | About{% endblock %}
+
+{% block content %}This is About page{% endblock %}
